# nanojsonc

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  VERSION  conanfile.py  vcpkg.json
.github/: FUNDING.yml
cmake/: nanoJSONcConfig.cmake.in
example/: CMakeLists.txt  example1.c  example2.c  example3.c
include/: parse.h  parser.h
src/: array.c  object.c
test/: CMakeLists.txt  test_array.c  test_object.c
